# claude-code-meter

./: .gitignore  Iniciar Meter.vbs  LICENSE  README.es.md  README.md  app_entry.py  bar.py  build_exe.ps1  config.example.json  main.py  meter.py  pyproject.toml  requirements.txt  tray.py
.github/workflows/: publish.yml
claude_code_meter/: __init__.py  __main__.py  bar.py  limits.py  main.py  meter.py  tray.py  usage.py
